# ai_spider

./: .gitignore  AGENTS.md  README.md  crawler.py  main.py  matcher.py  pyproject.toml
.github/workflows/: test.yml
ai_spider/: Main.qml  qmldir
data/: profile.yaml  sites.yaml
legacy/: .gitignore  AGENTS.md  _README.md
legacy/src/ai_spider/: __init__.py  __main__.py  crawler.py
legacy/tests/: test_crawler.py  test_main.py
src/ai_spider/: crawler.py  main.py  matcher.py
tests/: test_crawler.py  test_main.py  test_matcher.py
