[project]
name = "ai-spider"
version = "0.1.0"
description = "Discover and summarize job listings from across the web using AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-ollama>=1.1.0",
    "mypy>=1.20.0",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "types-PyYAML>=6.0.0",
]
